# Magnetic_Plugin

./: Joystick_example.py  README.md  convert_usd.py  create_catheter.py  create_rigid_catheter.py  deformable_object.py  force_on_cube.py  import_from_sim.py  magnet_cube_base_env.py  make_small_deformable.py  multiple_magnets.py  rigidcatheter.py
Experiment/: hsv_color_tracker_node.py  hsv_tracker.launch  navion_skrl.launch
Experiment/skrl_controller/: CMakeLists.txt  package.xml
Experiment/skrl_controller/launch/: skrl_launch.launch
Experiment/skrl_controller/src/: skrl_controller.py
USD/: RigidCatheter.usd  RigidCatheterColored.usd  navion_table.usd
USD/InnerJoint/: InnerJoint.usd
USD/Magnet/: .asset_hash  Magnet.usd  config.yaml
USD/Magnet/Props/: instanceable_meshes.usd
USD/OuterJoint/: OuterJoint.usd
USD/STL_Files/: InnerJoint.stl  Magnet.stl  OuterJoint.stl
cube/: 3D_cube_env.py  __init__.py  create_prims.py  cube_env.py  cube_noise_env.py  magnet_env.py  solve_maze.py  solve_maze_hard.py
cube/Calibration_data/: maze.usd  maze_hard.usd  maze_hard2.usd
magnetic/: RL_entity.py  RL_mpem.py  __init__.py  entity.py  force_torque_calc.py  mpem.py
magnetic_scripts/: RigidCatheter_Sim2Real.py
magnetic_scripts/catheter_optimization/: evaluate.py  optimize.py
rigid_catheter/: __init__.py  rigid_catheter_3D.py  rigid_catheter_MPEM.py  rigid_catheter_domainrandomization.py  rigid_catheter_kamerafahrt.py
rigid_catheter/agents/: skrl_ppo_cfg.yaml  skrl_ppo_cfg_big.yaml
