<?xml version="1.0"?>
<package format="2">
  <name>skrl_controller</name>
  <version>0.0.1</version>
  <description>SKRL-based controller for Tesla project</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mag_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mag_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-skrl</exec_depend>
  <exec_depend>python3-gymnasium</exec_depend>

  <export>
  </export>
</package>
